--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -129,104 +129,125 @@ body {
   padding-left: -1px !important;
 }
 
-
-.invoice-box {
-    max-width: 800px;
-    margin: auto;
-    padding: 30px;
-    border: 1px solid #eee;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .15);
-    font-size: 16px;
-    line-height: 24px;
-    font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
-    color: #555;
+.invoice-header { 
+  max-width: 800px;
+  margin: auto;
+  padding: 30px; 
+  font-size: 16px;
+  width: 100%;
+  line-height: 30px;
+  font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+  color: rgb(51, 4, 126); 
+  margin-top:2%;
+  margin-bottom: 1%;
 }
 
-.invoice-box table {
-    width: 100%;
+.invoice-header table {
+  border-collapse: collapse;
+    width: 100% !important;
     line-height: inherit;
     text-align: left;
     border-collapse: collapse;
+}
+.invoice-header td {
+    height: 15px;
+}
 
+.invoice-box {
+  max-width: 800px;
+  margin: auto;
+  padding: 30px;
+  border: 1px solid #eee;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .15);
+  font-size: 16px;
+  line-height: 20px;
+  font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+  color: #555;
+}
+
+.invoice-box table {
+  width: 100%;
+  line-height: inherit;
+  text-align: left;
 }
 
 .invoice-box table td {
-    padding: 5px;
-    vertical-align: top;
+  padding: 5px;
+  vertical-align: top;
 }
 
 .invoice-box table tr td:nth-child(2) {
-    text-align: left;
+  text-align: right;
 }
 
 .invoice-box table tr.top table td {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .invoice-box table tr.top table td.title {
-    font-size: 45px;
-    line-height: 45px;
-    color: #333;
+  font-size: 45px;
+  line-height: 45px;
+  color: #333;
 }
 
 .invoice-box table tr.information table td {
-    padding-bottom: 40px;
+  padding-bottom: 40px;
 }
 
 .invoice-box table tr.heading td {
-    background: #eee;
-    border-bottom: 1px solid #ddd;
-    font-weight: bold;
+  background: #eee;
+  border-bottom: 1px solid #ddd;
+  font-weight: bold;
+  text-align: center;
 }
 
 .invoice-box table tr.details td {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .invoice-box table tr.item td{
-    border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eee;
 }
 
 .invoice-box table tr.item.last td {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .invoice-box table tr.total td:nth-child(2) {
-    border-top: 2px solid #eee;
-    font-weight: bold;
+  border-top: 2px solid #eee;
+  font-weight: bold;
 }
 
 @media only screen and (max-width: 600px) {
-    .invoice-box table tr.top table td {
-        width: 100%;
-        display: block;
-        text-align: center;
-    }
-    
-    .invoice-box table tr.information table td {
-        width: 100%;
-        display: block;
-        text-align: center;
-    }
+  .invoice-box table tr.top table td {
+      width: 100%;
+      display: block;
+      text-align: center;
+  }
+  
+  .invoice-box table tr.information table td {
+      width: 100%;
+      display: block;
+      text-align: center;
+  }
 }
 
 /** RTL **/
 .rtl {
-    direction: rtl;
-    font-family: Tahoma, 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+  direction: rtl;
+  font-family: Tahoma, 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
 }
 
 .rtl table {
-    text-align: right;
+  text-align: right;
 }
 
 .rtl table tr td:nth-child(2) {
-    text-align: left;
+  text-align: left;
 }
 
-
-.invoice-box table td {
-  border: 1px solid black;
+/* 
+.invoice-box table td { 
   outline: thin solid;
 }
 .invoice-box table tr:first-child td {
@@ -245,7 +266,26 @@ body {
 .invoice-box table tr:last-child td:nth-child(1) {
   border-bottom: 0;
   border-left: 0;
+} */
+
+/* 
+.invoice-box table tr td:first-child {
+  border-left: 1;
 }
+.invoice-box table tr:last-child td {
+  border-bottom: 1;
+}
+
+.invoice-box table tr td:last-child {
+  border-right: 1;
+  text-align: center;
+}
+
+.invoice-box table tr:last-child td:nth-child(1) {
+  border-bottom: 0;
+  border-left: 0;
+} */
+
 
 }
 
