--- a/app/report/views/directFinalCover.html
+++ b/app/report/views/directFinalCover.html
@@ -11,19 +11,20 @@
 <p style="padding-left: 30px;" align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Chennai &ndash; 6.</span></span></p>
 <p align="right">&nbsp;</p>
 <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Respected Sir,</strong></span></span></p>
-<p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Sub:</strong></span></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Direct final payment for P.O.NO: {{reportCtrl.order.printOrderNumber}}. <strong>{{reportCtrl.order.printBookName}} {{reportCtrl.order.paymentType}} {{reportCtrl.order.bookNoOfCopies}}.</strong></span></span></p>
-<p align="justify">We have delivered for P.O.NO: {{reportCtrl.order.printOrderNumber}}. <strong>{{reportCtrl.order.printBookName}} {{reportCtrl.order.paymentType}} {{reportCtrl.order.bookNoOfCopies}}</strong>. &nbsp;Date: 11.10.2017. Now we are applying for direct final payment document copies are enclosed. With this letter, please arrange the payment.</p>
+<p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Sub:</strong></span></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Direct final payment for P.O.NO: {{reportCtrl.order.printOrderNumber}}. <strong>{{reportCtrl.order.printBookName}} {{reportCtrl.order.bookType}} {{reportCtrl.order.bookNoOfCopies}}.</strong></span></span></p>
+<p align="justify">We have delivered for P.O.NO: {{reportCtrl.order.printOrderNumber}}. <strong>{{reportCtrl.order.printBookName}} {{reportCtrl.order.bookType}} {{reportCtrl.order.bookNoOfCopies}}</strong>. &nbsp;Date: {{ reportCtrl.order.printOrderDate | date : 'dd.MM.y' }}. Now we are applying for direct final payment document copies are enclosed. With this letter, please arrange the payment.</p>
 <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Thanking You</span></span></p>
 <p align="right"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Yours faithfully,</span></span></p>
 <p align="justify">&nbsp;<span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Enclosure:</span></span></p>
 <ol>
 <li><span style="font-family: 'Times New Roman', serif;">Print order Xerox copy</span></li>
-<li><span style="font-family: 'Times New Roman', serif;">Paper/Board/Kraft issue voucher Xerox</span></li>
+<li><span style="font-family: 'Times New Roman', serif;">Original BRV’S {{reportCtrl.order.noOfBRV}}, Nos.</span></li>
+<li><span style="font-family: 'Times New Roman', serif;">Paper/Board/Kraft issue voucher</span></li>
 <li><span style="font-family: 'Times New Roman', serif;">Stamp Receipt</span></li>
-<li><span style="font-family: 'Times New Roman', serif;">Part payment voucher Xerox</span></li>
+<li><span style="font-family: 'Times New Roman', serif;">Invoice 1+2 Copies.</span></li>
 <li><span style="font-family: 'Times New Roman', serif;">Paper/Board/Kraft Consumption Statement</span></li>
+<li><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Sample Book 6 Nos.</span></span></li>
 <li><span style="font-family: 'Times New Roman', serif;">Inward / Out ward original</span></li>
 <li><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Plate effacement Certificate</span></span></li>
-<li><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Part Payment Invoice</span></span></li>
 </ol>
 </div>
